# AI-Context-Nexus

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILE_INDEX.md  PROJECT_SUMMARY.md  README.md  WHITEPAPER.md  docker-compose.yml  netlify.toml  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
agents/: agent_protocol.py
config/: config.json
core/: context_manager.py
docs/: agent_protocol.md  api_reference.md  architecture.md  failure_recovery.md  getting-started.md  index.md  memory_hierarchy.md  usage_guide.md
kubernetes/: deployment.yaml
memory/: memory_manager.py
proofs/: mathematical_proofs.md
public/: index.html
research/: future_expansions.md
scripts/: install.sh  nexus_cli.py  tmux_orchestrator.sh
